alignment fix

--- a/app/assets/stylesheets/soldstyles/_default_themes.scss
+++ b/app/assets/stylesheets/soldstyles/_default_themes.scss
@@ -586,7 +586,7 @@ padding: 10px;
           line-height: 16px;
         }
         a.last-sold:hover {text-decoration: none; color:#333333;}
-        .pull-right {padding-right:9px;}
+        .pull-right {padding-right:8px;}
         .btn-bin {
           width: 70px;
           margin-top: 12px;
